fix z-index

--- a/lesson3/styles.css
+++ b/lesson3/styles.css
@@ -13,8 +13,6 @@ footer{
 }
 .tileSec{
     padding: 80px 143px 116px;
-}
-.centerAlignContainer{
     text-align: center;
 }
 .heading{
@@ -72,8 +70,7 @@ footer{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    
+    transform: translateX(-50%) translateY(-50%);    
 }
 .tileHeading{
    font-size: 20px;
@@ -89,6 +86,7 @@ footer{
     padding: 58px 0 38px;    
     position: relative;
     z-index: 0;
+    text-align: center;
 }
 .downloadSection::after{
     content: '';
@@ -115,6 +113,7 @@ footer{
 footer{
     background-color: #000000;
     padding: 30px 0 15px;
+    text-align: center;
 }
 .copyright{
     margin-top: 18px;
